--- a/TimeUtil.BlazorWasmClient/wwwroot/index.html
+++ b/TimeUtil.BlazorWasmClient/wwwroot/index.html
@@ -221,23 +221,13 @@
         </style>
 
         <div class="mud-container mud-container-maxwidth-sm" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-            <div class="mud-paper mud-elevation-3 py-5" style="width:100%;">
-                <div class="" style="display:flex; place-content:center;">
-                    <svg class="mud-icon-root mud-svg-icon mud-inherit-text" style="font-size:15rem;" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M0 0h24v24H0V0z" fill="none"></path>
-                        <path d="M20 3h-1V2c0-.55-.45-1-1-1s-1 .45-1 1v1H7V2c0-.55-.45-1-1-1s-1 .45-1 1v1H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-1 18H5c-.55 0-1-.45-1-1V8h16v12c0 .55-.45 1-1 1z"></path>
-                    </svg>
-                </div>
-                <h1 class="mud-typography mud-typography-h3 mud-inherit-text" style="text-align: center;">Time Util</h1>
-                <div class="my-7 mx-5">
-                    <div class="mud-progress-linear mud-progress-indeterminate mud-progress-linear-small mud-progress-linear-color-primary horizontal mud-flip-x-rtl" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-                        <div class="mud-progress-linear-bars">
-                            <div class="mud-progress-linear-bar"></div>
-                            <div class="mud-progress-linear-bar"></div>
-                        </div>
-                    </div>
-                </div>
+            <div class="" style="display:flex; place-content:center;">
+                <svg class="mud-icon-root mud-svg-icon mud-inherit-text" style="font-size: 15rem; fill: #594ae2ff;" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M0 0h24v24H0V0z" fill="none"></path>
+                    <path d="M20 3h-1V2c0-.55-.45-1-1-1s-1 .45-1 1v1H7V2c0-.55-.45-1-1-1s-1 .45-1 1v1H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-1 18H5c-.55 0-1-.45-1-1V8h16v12c0 .55-.45 1-1 1z"></path>
+                </svg>
             </div>
+            <h1 class="mud-typography mud-typography-h3 mud-inherit-text" style="text-align: center;">Time Util</h1>
         </div>
     </div>
 
